--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     build:
       context: app
     env_file:
-      - "app/.env.docker"
+      - "api/.env.docker"
     container_name: fastapi_app
     restart: "always"
     ports:
@@ -17,7 +17,7 @@ services:
     container_name: postgres
     image: postgres:latest
     env_file:
-      - "app/.env.docker"
+      - "api/.env.docker"
     ports:
       - '5432:5432'
     volumes:
