--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3.12'
 services:
   app:
     build:
-      context: app
+      context: api
     env_file:
       - "api/.env.docker"
     container_name: fastapi_app
@@ -22,3 +22,15 @@ services:
       - '5432:5432'
     volumes:
       - ./db/:/var/lib/postgresql/data
+
+  postgres_test:
+    container_name: postgres_test
+    image: postgres:latest
+    environment:
+      POSTGRES_DB: test_micro_blogs
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+    ports:
+      - '5433:5432'
+    volumes:
+      - ./db_test/:/var/lib/postgresql/data
